# ds-log-2026

./: .gitignore  README.md
w01_example_topic/: README.md
w01_simple_path_finding/: README.md  main.ipynb  nodes_edges_extraction_from_img.ipynb  pyproject.toml
w02_15_fashion_story_optimizer/: README.md  main.py  pyproject.toml
w02_15_fashion_story_optimizer/data/: catalog_subset.csv
w02_15_fashion_story_optimizer/src/data/: read_data.py
w02_fashion_story_optimizer/: README.md
w02_fashion_story_optimizer/src/models/: README.md  milp_solver.py
w03_dimensionality_reduction_utils/: README.md
w04/: aa.ipynb  bb.ipynb  main_etl.py  pyproject.toml  scraper.py  update_db.py
w04/config/: config.py
w04/db/: build_db.py  schema.sql  update.py
w17_scrapling_tests/: 1_initial_tests.ipynb  2_real_example.ipynb  README.md  pyproject.toml
w24_rag_initial_examples/: README.md  main.ipynb  pyproject.toml
week-01/: README.md
wx_kaggle_notebooks/: fast_food_marketing_campaign.ipynb  mobile_games.ipynb
wx_random_works/: README.md
wx_random_works/chicken_wing_offer_optimiser/: README.md  optimiser.ipynb  pyproject.toml  wing_prices.csv
wx_random_works/validate_phone_numbers/: .env  README.md  docker-compose.yml  init.sql  main.ipynb  pyproject.toml
