[project]
name = "w03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dimensionality-reduction",
    "duckdb>=1.4.4",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "sqlfluff>=4.0.4",
]

[tool.uv.sources]
dimensionality-reduction = { git = "https://github.com/GonxaTroll/dimensionality-reduction.git", rev = "v1.0.0" }
