[project]
name = "w17_scrapling-tries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browserforge>=1.2.4",
    "curl-cffi>=0.15.0",
    "msgspec>=0.21.1",
    "pandas>=3.0.2",
    "patchright>=1.58.2",
    "playwright>=1.58.0",
    "scrapling>=0.4.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "nest-asyncio>=1.6.0",
]
